<resources>
    <string name="app_name">MyBmiKotlin</string>
    <string name="height_text">身高</string>
    <string name="name_text">名字</string>
    <string name="weight_text">體重</string>
    <string name="bmi_text">BMI</string>
    <string name="et_height_hint">請輸入身高</string>
    <string name="et_weight_hint">請輸入體重</string>
    <string name="et_name_hint">請輸入名字</string>
    <string name="calculating_bmi">計算BMI</string>
    <string name="no_format">編號: %d</string>
    <string name="name_format">名字: %s</string>
    <string name="age_format">年齡: %d</string>
    <string name="thin_format">過瘦: %d 位   (BMI &lt; 18.5)</string>
    <string name="normal_format">標準: %d 位   (18.5 &lt;= BMI &lt; 24)</string>
    <string name="fat_format">過胖: %d 位   (BMI &gt;= 24) </string>
    <string name="input_have_empty">輸入有空值</string>
    <string name="input_condition">輸入值不得小於1</string>
    <string name="clear_all_text">刪除全部</string>
    <string name="delete_by_selected_text">刪除已選</string>
    <string name="selected_format">已選: %d</string>
    <string name="clear_input">清除輸入</string>
    <string name="input_error">輸入的數值有誤，請重新輸入</string>
    <string name="modify_info_text">修改資訊</string>
    <string name="modify_success">修改成功</string>
    <string name="cancel_text">取消</string>
    <string name="confirm">確定</string>
    <string name="attention_text">注意</string>
    <string name="delete_by_id_question">確定要刪除選取的項目?</string>
    <string name="delete_all_question">確定要全部的項目?</string>
</resources>